# osc-data-model

./: .dockerignore  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
crates/osc-adapter-osc-types/src/: lib.rs
crates/osc-codec-json/: .gitignore
crates/osc-devtools/: .gitignore
examples/: roundtrip.rs
osc-adapter-osc-types/: .gitignore  Cargo.toml  README.md
osc-adapter-osc-types/src/: lib.rs
osc-adapter-osc-types/tests/: e2e_msgpack_roundtrip.rs
osc-codec-json/: Cargo.toml  README.md
osc-codec-json/src/: lib.rs
osc-codec-msgpack/: .gitignore  Cargo.toml  README.md
osc-codec-msgpack/src/: lib.rs
osc-devtools/: Cargo.toml  README.md
osc-devtools/src/: main.rs
osc-ffi/: Cargo.toml
osc-ffi/src/: lib.rs
osc-ir/: .gitignore  Cargo.toml  README.md
osc-ir/src/: lib.rs
tests/: integration_roundtrip.rs
