[package]
name = "osc-codec-json"
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.75"
description = "Experimental JSON codec for osc-ir intermediate representation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nagitch/osc-data-model"
homepage = "https://github.com/Nagitch/osc-data-model"
documentation = "https://docs.rs/osc-codec-json"
keywords = ["osc", "json", "codec", "serialization"]
categories = ["encoding"]
readme = "README.md"

[features]
default = ["osc10"]
osc10 = ["osc-ir/osc10"]
osc11 = ["osc10", "osc-ir/osc11"]

[dependencies]
osc-ir = { version = "0.1.0-alpha.1", path = "../osc-ir", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"