[package]
name = "osc-codec-msgpack"
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.75"
description = "Experimental MessagePack codec for osc-ir intermediate representation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nagitch/osc-data-model"
homepage = "https://github.com/Nagitch/osc-data-model"
documentation = "https://docs.rs/osc-codec-msgpack"
keywords = ["osc", "messagepack", "codec", "serialization"]
categories = ["encoding"]
readme = "README.md"

[dependencies]
osc-ir = { version = "0.1.0-alpha.1", path = "../osc-ir", features = ["alloc", "serde"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"