[package]
name = "osc-devtools"
version = "0.1.0"
edition = "2021"
description = "CLI / examples for osc-data-model workspace"
license = "MIT OR Apache-2.0"

[dependencies]
osc-ir = { path = "../osc-ir", features = ["alloc", "serde"] }
osc-codec-json = { path = "../osc-codec-json" }
osc-codec-msgpack = { path = "../osc-codec-msgpack" }
clap = { workspace = true }
anyhow = "1"