[package]
name = "osc-devtools"
version = "0.1.0-alpha.3"
edition = "2021"
rust-version = "1.75"
description = "Experimental CLI tools and examples for osc-data-model workspace"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nagitch/osc-data-model"
homepage = "https://github.com/Nagitch/osc-data-model"
documentation = "https://docs.rs/osc-devtools"
keywords = ["osc", "cli", "tools", "development"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
osc-ir = { version = "0.1.0-alpha.1", features = ["alloc", "serde"] }
osc-codec-json = { version = "0.1.0-alpha.5" }
osc-codec-msgpack = { version = "0.1.0-alpha.1" }
clap = { workspace = true }
anyhow = "1"