[package]
name = "osc-ir"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Protocol-agnostic IR compatible with JSON/MessagePack"
license = "MIT OR Apache-2.0"

[features]
# Keep core IR usable in no_std; enable owned containers via `alloc`.
alloc = []
serde = ["dep:serde", "dep:serde_bytes"]

# OSC version compatibility features
# OSC 1.0 support (basic OSC types, bundles, timetags)
osc10 = []
# OSC 1.1 support (includes 1.0 features plus additional types and features)
osc11 = ["osc10"]

# Default to OSC 1.0 support
default = ["osc10"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
serde_bytes = { version = "0.11", optional = true }

[dev-dependencies]
serde_json = "1"